# Uterm

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_EN.md  docker-compose.yml  pyproject.toml
docs/: DEPLOYMENT.md
src/uterm/: __init__.py  api.py  app.py  client.py  protocol.py  server.py  session.py  terminal.py  transport.py
tests/: test_integration.py  test_protocol.py  test_terminal.py
